# myCalDAV-Server

./: .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: requirements-calendar-server.md
plans/: implementation-task-list.md
src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  services.rs  state.rs  templates.rs
src/database/: mod.rs
src/handlers/: auth.rs  web.rs
src/migrations/: 001_initial_schema.sql  002_add_name_and_email_fields.sql  002_add_user_role.sql
src/ui/: mod.rs
src/ui/components/: calendar_card.rs  event_item.rs  flash_message.rs  form_inputs.rs  mod.rs  navbar.rs  share_item.rs  stat_card.rs
src/ui/layouts/: base_layout.rs  mod.rs
src/ui/pages/: admin.rs  calendar_detail.rs  calendar_form.rs  calendars.rs  dashboard.rs  event_form.rs  events.rs  login.rs  mod.rs  register.rs
static/css/: style.css
templates/: base.html  calendar_detail.html  calendar_form.html  calendars.html  dashboard.html  event_form.html  events.html  login.html  register.html
