[package]
name = "my_cal_dav_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs"] }
jsonwebtoken = "9.0"
bcrypt = "0.15"
base64 = "0.22"
askama = "0.12"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
tempfile = "3.0"
wiremock = "0.5"

[[bin]]
name = "my_cal_dav_server"
path = "src/main.rs"

[lib]
name = "my_cal_dav_server"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[package.metadata.docs.rs]
all-features = true