[package]
name = "my_cal_dav_server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Dioxus for UI
dioxus = { version = "0.7", features = ["router"] }
dioxus-ssr = { version = "0.7" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP server (for CalDAV API endpoints)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tokio = { version = "1.0", features = ["full"] }

# Authentication
jsonwebtoken = "9.0"
bcrypt = "0.18"
base64 = "0.22"

# Async
async-trait = "0.1"

# QR Code generation
qrcode = "0.14"
image = "0.25"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
tempfile = "3.0"
wiremock = "0.5"

[[bin]]
name = "my_cal_dav_server"
path = "src/main.rs"

[lib]
name = "my_cal_dav_server"
path = "src/lib.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[package.metadata.docs.rs]
all-features = true
